<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/subnav_layout" android:background="@drawable/nav_sub_title_background" android:layout_width="fill_parent" android:layout_height="@dimen/app_sub_title_height">
        <Button android:id="@id/button_global_sdr" android:text="@string/text_world_supply_and_demand" style="@style/nav_tab_button" />
        <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/subnav_cut_line" />
        <Button android:id="@id/button_sent_sdr" android:text="@string/text_publish_business_opportunities" style="@style/nav_tab_button" />
        <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/subnav_cut_line" />
        <Button android:id="@id/button_meeting_and_activity" android:text="@string/text_meeting_and_activity" style="@style/nav_tab_button" />
    </LinearLayout>
    <RelativeLayout android:id="@id/content_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/subnav_layout" />
</RelativeLayout>
