<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/include_nav" layout="@layout/include_nav" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/include_nav" style="@style/scroll_view">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="3.0dip" android:text="@string/text_improve_the_profile_tips1" />
            <TextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_improve_the_profile_tips2" />
            <RelativeLayout android:background="@drawable/xkk_bg" style="@style/input_cell">
                <ImageButton android:id="@id/name_clear" android:contentDescription="@string/ctd_clear" style="@style/input_clear" />
                <EditText android:id="@id/input_name" android:hint="@string/hint_input_real_name" android:layout_toLeftOf="@id/name_clear" android:inputType="text" style="@style/input_edit" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/select_industy" android:background="@drawable/xkk_bg" android:descendantFocusability="beforeDescendants" style="@style/input_cell">
                <ImageView android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:src="@drawable/xl_jt" android:contentDescription="@string/ctd_clear" style="@style/input_clear" />
                <TextView android:id="@id/text_industry" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:hint="@string/text_select_industies_title" style="@style/input_edit" />
            </RelativeLayout>
            <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/button_ok" android:background="@drawable/blue_button_3_background" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="3.0dip" android:layout_marginBottom="5.0dip" android:text="@string/text_ok" />
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:src="@drawable/ze_xms" android:scaleType="centerInside" android:adjustViewBounds="true" android:contentDescription="@string/ctd_nothing" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
