<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="top|left|center" android:orientation="horizontal" android:background="@drawable/cell_background" android:paddingLeft="40.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/arrow_right" android:contentDescription="@string/ctd_arrow_right" style="@style/more_arrow_right" />
    <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/text_label" android:background="@drawable/shape_text_supply" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_supply" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/text_loading" android:layout_toLeftOf="@id/arrow_right" android:layout_toRightOf="@id/text_label" />
</RelativeLayout>
