<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/cell_background" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="right" android:id="@id/text_label" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="80.0dip" android:text="@string/text_meeting_profile_date" />
    <ImageButton android:id="@id/time_image" android:background="@color/transparent" android:visibility="visible" android:layout_width="37.0dip" android:layout_height="37.0dip" android:src="@drawable/gray_time_icon_background" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_icon" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="left|center" android:id="@id/text_info" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="150.0dip" android:text="@string/text_loading" android:layout_toLeftOf="@id/time_image" android:layout_toRightOf="@id/text_label" />
</RelativeLayout>
