<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/list_item_background" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/image" android:layout_width="57.0dip" android:layout_height="57.0dip" android:layout_margin="3.0dip" android:src="@color/grey" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_icon" />
        <TextView android:textSize="9.0sp" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/text_num" android:background="@drawable/num_cricle" android:padding="1.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginLeft="45.0dip" android:layout_marginTop="-5.0dip" android:text="88" android:singleLine="true" android:contentDescription="@string/ctd_icon" />
        <ImageView android:id="@id/arrow_right" android:contentDescription="@string/ctd_arrow_right" style="@style/more_arrow_right" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrow_right" android:layout_toRightOf="@id/image" android:layout_centerVertical="true">
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="left|center" android:id="@id/text1" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_loading" />
            <TextView android:textSize="12.0sp" android:textColor="@color/black" android:gravity="left|center" android:id="@id/text2" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_loading" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:id="@id/cut_line" android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
</LinearLayout>
