<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_bgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/scroll_view">
        <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/world_layout" android:background="@drawable/sdr_layer_background" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:visibility="visible" android:clickable="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/image" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/gq_qq_icon" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_icon" />
                <ImageView android:id="@id/arrow_right" android:contentDescription="@string/ctd_icon" style="@style/more_arrow_right" />
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/text_world_supply_and_demand_info" android:singleLine="true" android:layout_toLeftOf="@id/arrow_right" android:layout_toRightOf="@id/image" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/profile_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:layout_below="@id/world_layout">
                <ImageView android:id="@id/user_icon" android:background="@drawable/user_icon_background" android:padding="2.0dip" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/user_photo" android:scaleType="fitXY" android:adjustViewBounds="true" android:contentDescription="@string/ctd_icon" />
                <ImageView android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="52.0dip" android:layout_marginTop="52.0dip" android:src="@drawable/ic_profile_icon_edit" android:scaleType="fitXY" android:contentDescription="@string/ctd_icon" />
                <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/user_icon">
                    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/text_user_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_loading" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_user_company" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_loading" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_user_job" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_loading" />
                </LinearLayout>
            </RelativeLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/text_publish_supply_demand_recruit_title" android:layout_below="@id/profile_layout" />
            <LinearLayout android:orientation="vertical" android:id="@id/sdr_layout" android:background="@drawable/sdr_layer_bg" android:paddingLeft="2.0px" android:paddingTop="0.0px" android:paddingRight="2.0px" android:paddingBottom="2.0px" android:clipToPadding="true" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/text">
                <RelativeLayout android:id="@id/supply_layout" android:background="@drawable/cell_top_grey_background" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/arrow_right_1" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="40.0dip" android:src="@drawable/gq_shuaxin_background" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_arrow_right" />
                    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrow_right_1">
                        <TextView android:textColor="@color/white" android:id="@id/text1" android:background="@drawable/shape_text_supply" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_supply" android:layout_alignParentLeft="true" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_supply" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/hint_input_supply_info" android:layout_toRightOf="@id/text1" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </RelativeLayout>
                <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
                <RelativeLayout android:id="@id/demand_layout" android:background="@drawable/cell_grey_background" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/arrow_right_2" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="40.0dip" android:src="@drawable/gq_shuaxin_background" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_arrow_right" />
                    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrow_right_2">
                        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/text4" android:background="@drawable/shape_text_demand" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_demand" android:layout_alignParentLeft="true" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_demand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/hint_input_demand_info" android:layout_toRightOf="@id/text4" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </RelativeLayout>
                <ImageView android:contentDescription="@string/ctd_cut_line" style="@style/list_cut_line" />
                <RelativeLayout android:id="@id/recruit_layout" android:background="@drawable/cell_bottom_grey_background" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@id/arrow_right_3" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="30.0dip" android:layout_height="40.0dip" android:src="@drawable/gq_shuaxin_background" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/ctd_arrow_right" />
                    <RelativeLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrow_right_3">
                        <TextView android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/text3" android:background="@drawable/shape_text_recruit" android:paddingLeft="5.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_recruit" android:layout_alignParentLeft="true" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/text_recruit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/hint_input_recruit_info" android:layout_toRightOf="@id/text3" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/last_publish_sdr_time_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_below="@id/sdr_layout">
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_publish_sdr_time" />
                <TextView android:textSize="14.0sp" android:textColor="@color/gray" android:id="@id/text_last_publish_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_loading" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
